name:                thank-you-stars
version:             0.3.0
synopsis:            Give your dependencies stars on GitHub!
description:
    A tool for starring GitHub repositories. It detects dependent libraries
    which are hosted on GitHub via .cabal files,
    and stars the repositories all at once.
homepage:            https://github.com/y-taka-23/thank-you-stars#readme
license:             BSD3
license-file:        LICENSE
author:              TAKAHASHI Yuto <ytaka23dev@gmail.com>
maintainer:          TAKAHASHI Yuto <ytaka23dev@gmail.com>
copyright:           Copyright (C) 2017 TAKAHASHI Yuto
category:            Utils
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Utils.ThankYouStars.GitHub
                     , Utils.ThankYouStars.Package
  other-modules:       Paths_thank_you_stars
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , Cabal
                     , containers
                     , directory
                     , filepath
                     , hackage-db
                     , req
                     , split
                     , text
  default-language:    Haskell2010

executable thank-you-stars
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , directory
                     , filepath
                     , thank-you-stars
  default-language:    Haskell2010

test-suite thank-you-stars-spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Utils.ThankYouStars.GitHubSpec
                       Utils.ThankYouStars.PackageSpec
  build-depends:       base
                     , Cabal
                     , containers
                     , directory
                     , filepath
                     , hspec
                     , thank-you-stars
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/y-taka-23/thank-you-stars
