cabal-version:      2.4
name:               thank-you-stars
version:            1.0.0
synopsis:           Give your dependencies stars on GitHub!
description:
    A tool for starring GitHub repositories. It detects dependent libraries
    which are hosted on GitHub via .cabal files,
    and stars the repositories all at once.
category:           Utils
homepage:           https://github.com/y-taka-23/thank-you-stars
license:            BSD-3-Clause
license-file:       LICENSE
author:             Yuto Takahashi <ytaka23dev@gmail.com>
maintainer:         Yuto Takahashi <ytaka23dev@gmail.com>
copyright:          Copyright (C) 2022 Yuto Takahashi
extra-source-files: README.md
                  , cabal.project.freeze

common common
    ghc-options:      -Wall
    build-depends:    base >=4.7 && <5
    default-language: Haskell2010

executable thank-you-stars
    import:           common
    hs-source-dirs:   app
    main-is:          Main.hs
    build-depends:    thank-you-stars
                    , containers
                    , directory
                    , filepath

library
    import:           common
    hs-source-dirs:   src
    exposed-modules:  Utils.ThankYouStars.GitHub
                    , Utils.ThankYouStars.Package
    other-modules:    Paths_thank_you_stars
    autogen-modules:  Paths_thank_you_stars
    build-depends:    aeson
                    , bytestring
                    , Cabal
                    , containers
                    , directory
                    , filepath
                    , hackage-db
                    , req
                    , split
                    , text

test-suite thank-you-stars-spec
    import:             common
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            Spec.hs
    other-modules:      Utils.ThankYouStars.GitHubSpec
                        Utils.ThankYouStars.PackageSpec 
    build-depends:      Cabal
                      , containers
                      , directory
                      , filepath
                      , hspec
                      , thank-you-stars
    build-tool-depends: hspec-discover:hspec-discover
